--- a/team irene/Team irene/Team irene.csproj
+++ b/team irene/Team irene/Team irene.csproj
@@ -8,4 +8,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../team irene2/team irene2.csproj"/>
+  </ItemGroup>
 </Project>
