added team_irene2 library reference to Tests unit test library and changed files to new project names that I forgot

--- a/team irene/Team_irene/Team_irene.csproj
+++ b/team irene/Team_irene/Team_irene.csproj
@@ -9,6 +9,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../team irene2/team irene2.csproj"/>
+    <ProjectReference Include="../team_irene2/team_irene2.csproj"/>
   </ItemGroup>
 </Project>
