--- a/team irene/Tests/Tests.csproj
+++ b/team irene/Tests/Tests.csproj
@@ -20,4 +20,8 @@
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\team_irene2\team_irene2.csproj" />
+  </ItemGroup>
+
 </Project>
