--- a/team irene/Team_irene/Team_irene.csproj
+++ b/team irene/Team_irene/Team_irene.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../team_irene2/team_irene2.csproj"/>
+    <ProjectReference Include="../team_irene2/team_irene2.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
+    <PackageReference Include="MySql.Data" Version="9.2.0" />
   </ItemGroup>
 </Project>
