--- a/basic_information_library/basic_information_library.csproj
+++ b/basic_information_library/basic_information_library.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>team_irene2</RootNamespace>
+    <RootNamespace>basic_information_library</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
