--- a/basic_information_library/basic_information_library.csproj
+++ b/basic_information_library/basic_information_library.csproj
@@ -5,10 +5,11 @@
     <RootNamespace>basic_information_library</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>ee98fcea-ca1b-472c-8291-308e114475be</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetEnv" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.3" />
     <PackageReference Include="MySql.Data" Version="9.2.0" />
   </ItemGroup>
 
