--- a/basic_information_library/basic_information_library.csproj
+++ b/basic_information_library/basic_information_library.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.3" />
     <PackageReference Include="MySql.Data" Version="9.2.0" />
+    <PackageReference Include="MySql.Data.EntityFramework" Version="8.0.22" />
   </ItemGroup>
 
 </Project>
