hid the secrets away

--- a/basic_information_consumer/basic_information_consumer.csproj
+++ b/basic_information_consumer/basic_information_consumer.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>basic_information_consumer</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>fc89005e-4edd-4b50-aa80-84c2e926d9c5</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,12 +18,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.3" />
   </ItemGroup>
 </Project>
