fixed database unit tests (#3)
* fixed database unit tests

* unit test got data from database and checked with data to insert

* passed all unit test of database connection

* used Assert.Equal in Tests.TestDatabase.TestDatabaseInsert

* changed value parameter names

* tested database select

* starting to create db context

* created entity framework and db context for my database

* a whole lot of struggling

* hid the secrets away

* tested database context

* added web api

--- a/basic_information_consumer/basic_information_consumer.csproj
+++ b/basic_information_consumer/basic_information_consumer.csproj
@@ -6,9 +6,18 @@
     <RootNamespace>basic_information_consumer</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>fc89005e-4edd-4b50-aa80-84c2e926d9c5</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="../basic_information_library/basic_information_library.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.11">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.3" />
   </ItemGroup>
 </Project>
